[package]
name = "doldorajs"
authors = ["etteryand0 <etteryand@gmail.com>"]
readme = "./README.md"
homepage = "https://github.com/etteryand0/doldorajs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
